caputils-0.7.10
---------------

	* add: stream_peek to look at packet but don't pop it.
	* fix: stream_copy now truncates packets where caplen is greater than
	       wire len, e.g. when capturing using "novalen slen=1500" on a DAG
	       card. The truncated part is only zeroes.
	* fix: [capinfo] pad duration seconds with zero when single digit.
	* fix: stream_read timeout works again.

caputils-0.7.9
--------------

	* fix: [capinfo] handle when duration is less than one second.
	* add: [capinfo] show mampids
	* add: --filter-mode argument.
	* fix: capinfo now properly resets the packet counters when using
	       multiple files.
	* change: stream_read now drops invalid measurement frames.
	* fix: capdump properly handles SIGTERM.
	* change: show localtime instead of UTC (but it show timezone as well)
	* change: changed marker report to match progress report.

caputils-0.7.8
--------------

	* fix: pfring_recv no longer blocks when reading additional frames while
	       buffer is neither full or empty (i.e no packets can be read even
	       if buffer isn't empty)
	* add: capshow displays markers.
	* fix: is_marker properly returns dst port instead of zero when passing
	       zero as port.

caputils-0.7.7
--------------

	* add: support for AND/OR in filter.
	* add: hexdump_str() which is the same as old hexdump() but saves to a
	       string instead of writing to FILE.
	* add: progress report to capdump.
	* fix: regression fix for capdump buffer size causing ethernet streams
	       to fail for mtu > 4096.
	* fix: regression fix. multiple streams caused the second stream to be
	       ignored.

caputils-0.7.6
--------------

	* fix: uint64_t printing in capdump.
	* fix: fixing capfilter.
	* add: stream_copy as wrapper for stream_write operating on caphead.
	* add: caphead_t typedef
	* change: added default address argument for stream_from_getopt
	* change: capdump --marker now takes a port number.
	* add: functions for working with timepico.