@@ -80,6 +80,7 @@ AC_ARG_ENABLE([capdump],   [AS_HELP_STRING([--enable-capdump],   [Build capdump 
 AC_ARG_ENABLE([capinfo],   [AS_HELP_STRING([--enable-capinfo],   [Build capinfo utility (show info about a stream) @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([capfilter], [AS_HELP_STRING([--enable-capfilter], [Build capfilter utility (filter existing stream) @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([capmarker], [AS_HELP_STRING([--enable-capmarker], [Build capmarker utility @<:@default=enabled@:>@])])
+AC_ARG_ENABLE([capmerge],  [AS_HELP_STRING([--enable-capmerge],  [Build capmerge utility @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([capshow],   [AS_HELP_STRING([--enable-capshow],   [Build capshow utility @<:@default=enabled@:>@])])
 AC_ARG_ENABLE([utils],     [AS_HELP_STRING([--enable-utils],     [By default all utils are build, this flag disables all utils unless they are explicitly enabled. This also disables pcap support by default but can be explicitly enabled with --with-pcap])])
 AC_ARG_WITH([pcap], [AS_HELP_STRING([--with-pcap@<:@=PREFIX@:>@], [Build utilities for conversion to and from pcap files. @<:@default=enabled@:>@])])
@@ -99,6 +100,7 @@ AM_CONDITIONAL([BUILD_CAPDUMP],   [test "x$enable_capdump"   = "xyes" -o "x$enab
 AM_CONDITIONAL([BUILD_CAPINFO],   [test "x$enable_capinfo"   = "xyes" -o "x$enable_capinfo"   = "$utils_unset"])
 AM_CONDITIONAL([BUILD_CAPFILTER], [test "x$enable_capfilter" = "xyes" -o "x$enable_capfilter" = "$utils_unset"])
 AM_CONDITIONAL([BUILD_CAPMARKER], [test "x$enable_capmarker" = "xyes" -o "x$enable_capmarker" = "$utils_unset"])
+AM_CONDITIONAL([BUILD_CAPMERGE],  [test "x$enable_capmerge"  = "xyes" -o "x$enable_capmerge"  = "$utils_unset"])
 AM_CONDITIONAL([BUILD_CAPSHOW],   [test "x$enable_capshow"   = "xyes" -o "x$enable_capshow"   = "$utils_unset"])
 AM_CONDITIONAL([BUILD_PCAP],      [test "x$with_pcap" != "xno"])
 AX_PCAP($with_pcap)
